# PotreeConverter

./: .gitignore  CMakeLists.txt  README-soeroesg.md  build.sh
Converter/include/: DbgWriter.h  PotreeConverter.h  converter_utils.h  indexer.h  sampler_poisson.h  sampler_poisson_average.h  sampler_random.h
Converter/libs/laszip/: CMakeLists.txt
Converter/modules/unsuck/: filesystem.hpp  unsuck.hpp
Converter/src/: chunker_countsort_laszip.cpp  indexer.cpp  logger.cpp  main.cpp
